--- a/_posts/2025-12-19-bruh-idk.md
+++ b/_posts/2025-12-19-bruh-idk.md
@@ -1,14 +1,10 @@
 ---
-title: bruh idk
+title: not sure yet
 date: 2025-12-19 12:00:00 -0500
-categories: [hardware, bruh]
-tags: [idkman]
+categories: []
+tags: []
 ---
 
 # Welcome
 
-```lua
-local person = "idk lol"
-for i, v in ipairs():
-
-```
+I might add something here soon...
